Prevent footer collapse, fix UI errors

--- a/src/layout/ui.css
+++ b/src/layout/ui.css
@@ -359,17 +359,26 @@ div.pay .btn-link {
 
 footer {
     background: white;
-    padding: 12px 8px 8px;
+    padding: 12px 0 8px 8px;
     position: fixed;
     width: 100%;
     bottom: 0;
     z-index: 100;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 footer .player-buttons,
 footer .mode-volume {
     position: relative;
     top: 2px;
+}
+
+footer .mode-volume {
+    padding-right: 8px;
+    background: white;
 }
 
 footer .player-buttons > span,
